--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
             <h1><a href="/">Blog Django Livre</a></h1>
         </div>
 
-        <div>
-            <p>publicado: 14.06.2014, 12:14</p>
-            <h2><a href="">Meu primeiro post</a></h2>
-            <p>teste testes testetsdfgsdfgsfdgsfgdsdfgsfgsgfsfg gsa sdfgsfdgsfdgsf   asdfgsdfgsdfgsfdsdgsdfgsgfsfgsf.</p>
-        </div>
+        {% for post in posts %}
+         <div>
+           <p>publicado em: {{ post.published_date }}</p>
+           <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+         </div>
+        {% endfor %}
 
-        <div>
-            <p>publicado: 14.06.2014, 12:14</p>
-            <h2><a href="">Meu segundo post</a></h2>
-            <p>çalsdfjaçlsdfjaçsldfkjaçsdklfjasçldfkajlçdfjaçdlsfjkaçdslfkjaçdslfkjadsçlfkjadslçfkajdfçlaksjdfçlaksdjfçlaskdjf.</p>
-        </div>
     </body>
 </html>
